--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
   php:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: php/Dockerfile
     container_name: php-symfony-app
     volumes:
       - ./app:/var/www/app
